@@ -1,3 +1,12 @@
+2012-01-14  Tobias Burnus  <burnus@net-b.de>
+
+	Backported from mainline
+	2012-01-14  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/51800
+	* gfortran.dg/init_flag_8.f90: New.
+	* gfortran.dg/init_flag_9.f90: New.
+
 2012-01-12  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	Backport from mainline:
@@ -12,7 +21,7 @@
 
 2012-01-09  Martin Jambor  <mjambor@suse.cz>
 
-        PR tree-optimization/51759
+	PR tree-optimization/51759
 	* g++.dg/ipa/pr51759.C: New test.
 
 2012-01-09  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>
