@@ -1,3 +1,12 @@
+2012-01-14  Tobias Burnus  <burnus@net-b.de>
+
+	Backported from mainline
+	2012-01-14  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/51800
+	* resolve.c (build_default_init_expr): Also initialize
+	nonconstant-length strings with -finit-character=<n>.
+
 2012-01-01  Thomas König  <tkoenig@gcc.gnu.org>
 
 	Backport from trunk
